[package]
name = "rustc-targets"
version = "0.1.0"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.56.1" # https://github.com/foresterre/cargo-msrv/issues/244
description = "Get the list of targets supported by rustc."
documentation = "https://docs.rs/rustc-targets"
readme = "README.md"
repository = "https://github.com/JohnScience/rustc-targets"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["rustc", "targets", "triples"]
categories = ["development-tools::build-utils"] # https://crates.io/category_slugs
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
autobins = false
autoexamples = false
autotests = false
autobenches = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]